src/test/deca/codegen/valid/SO/helloWorldInclude.deca
// Description:
//    Test pour vérifier les include
//
// Resultats:
//    Hello world !
//
// Historique:
//    cree le 14/01/2022


#include "hello.decah"
#include "world.decah"